# bloggy

./: .gitignore  App.hs  Archive.hs  GenArchive.hs  Model.hs  Types.hs  bloggy.cabal  bloggy.hs  settings.yaml
static/: script.js  styl.css  style.css
templates/: main.st
